--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="=keywords" content="HTML, CSS">
     <meta name="=description" content="...">
     
-    <title>Che divertente HTML</title>
+    <title>Pavesini Esport</title>
     <style>
         img {
             width: 100px;
